Fix a responsive layout bug.

--- a/application/static/css/layout.less
+++ b/application/static/css/layout.less
@@ -36,7 +36,7 @@ body {
     color: #333;
     border-bottom: 2px solid @main-color;
 
-    @media (max-width: 768px) {
+    @media (max-width: @screen-xs-max) {
       border-bottom: none;
       background-color: #e9e9e9;
     }
@@ -50,7 +50,7 @@ body {
   margin-bottom: 40px;
 
   .navbar-brand {
-    @media (min-width: 768px) {
+    @media (min-width: @screen-sm-min) {
       padding-top: 20px;
       padding-bottom: 20px;
       height: auto;
@@ -58,14 +58,14 @@ body {
   }
 
   .navbar-nav {
-    @media (max-width: 768px) {
+    @media (max-width: @screen-xs-max) {
       border-bottom: 1px solid #e7e7e7;
     }
 
     & > li {
       z-index: 100;
 
-      @media (min-width: 768px) {
+      @media (min-width: @screen-sm-min) {
         padding-left: 5px;
         padding-right: 5px;
 
@@ -83,7 +83,7 @@ body {
     margin-top: 15px;
     .transition(all, 0.08s);
 
-    @media (max-width: 768px) {
+    @media (max-width: @screen-xs-max) {
       margin-top: 5.5px;
       margin-bottom: 15px;
       margin-left: 0;
