--- a/application/static/css/utils.less
+++ b/application/static/css/utils.less
@@ -3,6 +3,10 @@
 @dark-main: darken(@main-color, 10%);
 @light-main: lighten(@main-color, 20%);
 
+// 响应式
+@screen-sm-min: 768px;
+@screen-xs-max: (@screen-sm-min - 1);
+
 // 圆角
 .border-radius( @radius: 5px ) {
   -webkit-border-radius: @radius;
